fix: Prevented overflow from grid layout.

--- a/styles/start.css
+++ b/styles/start.css
@@ -1,12 +1,13 @@
 .grid-container {
   display: grid;
-  grid-template-columns: 25% 50% 25%;
+  grid-template-columns: 24% 48% 24%;
   padding: 10px;
   gap: 2%;
 }
 
 .graph {
   display: block;
+  max-width: 100%;
 }
 
 .grid-item {
